# contractor-voice-bot-en

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: booking.py  escalation.py  faq.py  notification.py  pipeline.py  receptionist.py
contractor_docs/: contractor_en.md
docker/: docker-compose.yml  grafana_dashboard.json  prometheus.yml
integrations/: calendar.py  sms.py
observability/: metrics.py  mlflow_tracker.py  phoenix_tracer.py
rag/: ingest.py  query.py
rag/evals/: ragas_suite.py  ragas_suite_non-llm.py
voice/: audio.py  client.html  server.py  stt.py  tts.py
